chore: add script detection